--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 h1{
 	text-align: center;
-	font-size: 400%;
-	color: black;
+	font-size: 300%;
+	color: brown;
 	font-family: georgia,garamond,serif;
 }
 
@@ -11,12 +11,12 @@ h1{
 
 .name{
 	font-size: 25px;
-	color: black;
+	color: red;
 	line-height: 120%;
 }
 
 h2{
-	color: black;
+	color: cyan;
 }
 
 p{
