--- a/css/resume.css
+++ b/css/resume.css
@@ -12,7 +12,7 @@ h1{
 .name{
 	font-size: 25px;
 	color: red;
-	line-height: 120%;
+	line-height: 220%;
 }
 
 h2{
@@ -20,5 +20,14 @@ h2{
 }
 
 p{
-	font-size: 30px;
+	font-size: 20px;
 }
+
+th{
+	font-size: 20px;
+	color: green;
+}
+
+td{
+	font-size: 20px;
+}	
